here tailwind installed on our project

--- a/yari/src/main/resources/templates/home.html
+++ b/yari/src/main/resources/templates/home.html
@@ -4,21 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .container{
-            margin: auto;
-            width: 50%;
-            padding: 30px;
-            background: #e2e2e2;
-        }
-    </style>
+    <link rel="stylesheet" data-th-href="@{'/css/output.css'}">
 </head>
 <body>
-    <div class="">
-        <h1 data-th-text="${name}">hellow boy welcome to welcome page</h1>
-        <p>Youtube channel : <span data-th-text="${youtube_channel}"></span></p>
-        <!-- <p>Github Repository : <span data-th-text="${github}"></span></p> -->
-        <a th:href="${github}">click here to open github</a>
+    <div class="text-center">
+        <h1 class="text-4xl text-green-800">hellow boys welcome to My World</h1>
+        <p class="text-2xl">Youtube channel : <span data-th-text="${youtube_channel}"></span></p>
+        <a th:href="${github}" class="text-blue-600">click here to open github</a>
         <p>Lorem ipsum, dolor sit amet consectetur veritatis nostrum.</p>
     </div>
 </body>
