--- a/yari/src/main/resources/templates/signup.html
+++ b/yari/src/main/resources/templates/signup.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>homepage</title>
+    <title>signup</title>
     <link rel="stylesheet" data-th-href="@{'/css/output.css'}">
 </head>
 <body>
     <h1 id="home">
-        <h2>hello home boy</h2>
-        <h3>this is content area</h3>
+        <h2>this is signup page</h2>
+        <h3>this is signup area</h3>
     </h1>
     <script>
-        console.log("this is mine home page")
+        console.log("this is mine signup page")
     </script>
 </body>
 </html>
