--- a/yari/src/main/resources/templates/base.html
+++ b/yari/src/main/resources/templates/base.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" th:fragment="parent(content,title,script,power)" xmlns:th="http://www.thymeleaf.org">
+<html class="light" lang="en" th:fragment="parent(content,title,script,power)" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" data-th-href="@{'/css/output.css'}">
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title data-th-replace="${title}">Base page</title>
 </head>
-<body>
+<body class=" bg-white text-gray-900 dark:text-white dark:bg-gray-800">
     <div data-th-replace="navbar :: navbar"></div>
-
     <!-- content -->
     <div class="p-4">
         <section data-th-replace="${content}"></section>
@@ -18,5 +18,6 @@
     <div data-th-replace="footer :: footer"></div>
     <script data-th-replace="${script}"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
+    <script data-th-src="@{'/js/script.js'}"></script>
 </body>
 </html>
