--- a/yari/src/main/resources/templates/signup.html
+++ b/yari/src/main/resources/templates/signup.html
@@ -5,14 +5,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>signup</title>
     <link rel="stylesheet" data-th-href="@{'/css/output.css'}">
+    <style>
+        input[type="text"]:focus {
+            outline: none; /* Removes the default outline */
+            border: 2px solid #4caf50; /* Adds a custom border color */
+            border-radius: 5px; /* Optional: Rounded corners */
+            box-shadow: 0 0 5px rgba(76, 175, 80, 0.5); }/* Optional: Adds shadow */
+    </style>
 </head>
 <body>
-    <h1 id="home">
-        <h2>this is signup page</h2>
-        <h3>this is signup area</h3>
-    </h1>
-    <script>
-        console.log("this is mine signup page")
-    </script>
+    <div id="home">
+        <div class="grid grid-cols-12">
+            <div class="col-span-4 md:col-span-2 lg:col-span-3 xl:col-span-4"></div>
+            <div class="col-span-12 md:col-span-8 lg:col-span-6 xl:col-span-4">
+                <div href="#" class="block max p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+
+                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Signup Here</h5>
+                    <p class="font-normal text-gray-700 dark:text-gray-400">
+                        Lets.. start making friends
+                    </p>
+                    <form action="" class="mt-5">
+                            <div class="mb-5">
+                                <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Name</label>
+                                <input type="text" id="name" class="" placeholder="Enter your Name" required />
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email</label>
+                                <input type="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-orange-500 focus:border-orange-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-orange-500 dark:focus:border-orange-500" placeholder="exampleyour@gmail.com" required />
+                            </div>
+                            <div class="mb-3">
+                                <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password</label>
+                                    <input
+                                        type="password"
+                                        id="password"
+                                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-orange-500 focus:border-orange-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-orange-500 dark:focus:border-orange-500"
+                                        placeholder="Create your unique password"
+                                        required
+                                    />
+                            </div>   
+                            <div>                         
+                                <label for="about" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">About yourself</label>
+                                <textarea id="about" rows="6" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-orange-500 focus:border-orange-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-orange-500 dark:focus:border-orange-500" placeholder="Write your thoughts here..."></textarea>
+                            </div>
+                            <div class="grid grid-cols-10 gap-4 items-center">
+                                <div class="mb-3 col-span-7">
+                                    <button type="submit" class="mt-5 w-full bg-gray-800  text-white  hover:bg-gray-500/50 hover:shadow-lg dark:bg-gray-700 dark:hover:bg-gray-600 font-bold py-2 px-3 rounded focus:outline-none focus:shadow-outline transition duration-300">Signup</button>
+                                </div>
+                                <div class="col-span-3">
+                                    <button
+                                    type="reset"
+                                    class="mt-3 w-full bg-gray-800 text-white hover:bg-orange-500 hover:shadow-lg hover:shadow-orange-500/50 dark:bg-orange-800 dark:hover:bg-orange-500 dark:hover:shadow-orange-500 font-bold py-2 px-3 rounded transition duration-300">
+                                    Reset
+                                </button>
+                                </div>
+                            </div>
+                            <div class="mb-0">
+                                <button type="login-page" class="mt-5 w-full bg-gray-800  text-white  hover:bg-gray-500/50 hover:shadow-lg dark:bg-gray-700 dark:hover:bg-gray-600 font-bold py-2 px-3 rounded focus:outline-none focus:shadow-outline transition duration-300">Already have an account? Login</button>
+                            </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
